fix: hide extra line break in receipt heading to prevent unnecessary spacing

--- a/src/DonationForms/resources/styles/components/_receipt.scss
+++ b/src/DonationForms/resources/styles/components/_receipt.scss
@@ -318,6 +318,10 @@
     &-heading {
         margin-block-end: 1rem;
 
+        > br {
+            display: none;
+        }
+
         &::after {
             position: absolute;
             content: '';
